--- a/notebooks/analysis_of_character_embeddings.ipynb
+++ b/notebooks/analysis_of_character_embeddings.ipynb
@@ -8,14 +8,19 @@
     "First, run the following command in the root path of this repository:\n",
     "\n",
     "```shell\n",
+    "export archive_file=\"output/CE-CLCNN/wiki_title/ja/base/model.tar.gz\"\n",
+    "export input_file=\"https://github.com/frederick0329/Learning-Character-Level/raw/master/data/ja_test.txt\"\n",
+    "export output_file=\"output/CE-CLCNN/wiki_title/ja/with_RE_and_WT/prediction_result.jsonl\"\n",
+    "\n",
+    "\n",
     "CUDA_VISIBLE_DEVICES=0 allennlp predict \\\n",
-    "    output/CE-CLCNN/wiki_title/ja/with_RE_and_WT/model.tar.gz \\\n",
-    "    https://github.com/frederick0329/Learning-Character-Level/raw/master/data/ja_test.txt \\\n",
-    "    --cuda-device 0 \\\n",
+    "    $archive_file \\\n",
+    "    $input_file \\\n",
+    "    --output-file $output_file \\\n",
     "    --use-dataset-reader \\\n",
     "    --dataset-reader-choice validation \\\n",
     "    --predictor wiki_title \\\n",
-    "    --output-file output/CE-CLCNN/wiki_title/ja/with_RE_and_WT/prediction_result.jsonl\n",
+    "    --cuda-device 0\n",
     "```"
    ]
   },
@@ -68,7 +73,10 @@
    "source": [
     "ROOT_DIR = pathlib.Path('.').resolve().parent\n",
     "\n",
-    "prediction_result_jsonl_path = ROOT_DIR / 'output' / 'CE-CLCNN' / 'wiki_title' / 'ja' / 'base' / 'prediction_result.jsonl'"
+    "prediction_result_jsonl_path = ROOT_DIR / 'output' / 'CE-CLCNN' / 'wiki_title' / 'ja' / 'base' / 'prediction_result.jsonl'\n",
+    "\n",
+    "if not prediction_result_jsonl_path.exists():\n",
+    "    raise FileNotFoundError(prediction_result_jsonl_path)"
    ]
   },
   {
